# prgpu

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PUBLISH.md  README.md  build.rs  build_all.sh  gen_lockfiles.sh  new_effect.sh  plugin_build.sh  vekl.h
.clinerules/: cuda-metal-dsl.md  project-context.md
.github/: copilot-instructions.md
.github/workflows/: build.yaml  deploy.yaml  publish.yml
chromaticaberration/: Cargo.toml  build.rs
chromaticaberration/shaders/: main.wgsl
chromaticaberration/src/: lib.rs  params.rs  wgpu_procs.rs
core/: math.h
docs/: adobe_adapters.md  config_builder.md  effect_api.md  kernel_descriptor.md  license_gate.md  migration_high_level_api.md  mip_chain.md  params_visibility.md  render_graph.md  source_snapshot.md  testing.md  timing.md  xframe.md
docs/gpu_struct/: examples.md  index.md  layout_rules.md
docs/params/: 01-introduction.md  02-use-cases.md  03-reference.md
docs/testing/: index.md  tutorial-01-basic.md  tutorial-02-advanced.md  tutorial-03-metrics.md
echo/: .gitignore  Cargo.toml  build.rs
echo/shaders/: main.wgsl
echo/src/: lib.rs  params.rs  wgpu_procs.rs
godrays/: Cargo.toml  build.rs
godrays/shaders/: main.wgsl
godrays/src/: lib.rs  params.rs  wgpu_procs.rs
hueshift/: Cargo.toml  build.rs
hueshift/shaders/: main.wgsl
hueshift/src/: lib.rs  params.rs  wgpu_procs.rs
milkshake/: Cargo.toml  build.rs
milkshake/shaders/: shake.wgsl
milkshake/src/: lib.rs  params.rs  wgpu_procs.rs
milkshake/src/datas/: mod.rs  repeat_mode.rs  shake_style.rs
mindglow/: Cargo.toml  build.rs
mindglow/shaders/: blur.wgsl  combine.wgsl  combine_backup.wgsl  combine_heavy.wgsl  copy_to_16f.wgsl  downsample.wgsl  upsample.wgsl
mindglow/src/: lib.rs  params.rs  wgpu_procs.rs
pixelsort/: Cargo.toml  build.rs
pixelsort/shaders/: main.wgsl
pixelsort/src/: lib.rs  params.rs  wgpu_procs.rs
plasma/: Cargo.toml  build.rs
plasma/shaders/: turbulent_depth.wgsl
plasmawaves/: Cargo.toml  rustfmt.toml
plasmawaves/shaders/: energy_flux.wgsl  sun.wgsl  velvet.wgsl
plasmawaves/src/: lib.rs  params.rs  wgpu_procs.rs
prgpu-build/: Cargo.toml
prgpu-build/src/: backend.rs  bindings.rs  compile.rs  cpu_dispatch.rs  lib.rs  lsp.rs  meta_gen.rs  metadata.rs  pipl.rs
prgpu-macro/: Cargo.toml  README.md
prgpu-macro/src/: diagnostics.rs  generate.rs  kernel_gen.rs  kernel_parse.rs  layout.rs  lib.rs  params_gen.rs  params_parse.rs  parse.rs  popup.rs  types.rs
prgpu/src/: lib.rs  params.rs
prgpu/src/gpu/backends/cuda/: mod.rs
prgpu/src/types/: config.rs
radialblur/: Cargo.toml  build.rs
radialblur/shaders/: main.wgsl
radialblur/src/: lib.rs  params.rs  wgpu_procs.rs
retrovhs/: Cargo.toml  build.rs
retrovhs/shaders/: compress.wgsl  main.wgsl  signal_noise.wgsl
retrovhs/src/: lib.rs  params.rs  wgpu_procs.rs
runtime/cpu/: vector.h
runtime/cuda/: math.cuh  vector.cuh
runtime/metal/: defines.metal  math.metal  vector.metal
scripts/: _install_batch.py  build_all.py  bump-versions.sh  common.py  gen_lockfiles.py  naming.py  new_effect.py  plugin_build.py  sync-vekl.sh  utils.py
shaders/: diff.slang  mip_downsample.slang  text_overlay.slang
src/: bench.rs  effect.rs  lib.rs  logging.rs  params.rs  prelude.rs  register_effect.rs  timing.rs
src/adobe/: ae.rs  mod.rs  premiere.rs
src/cpu/: buffer.rs  codegen.rs  diag.rs  mod.rs  pipeline.rs  pool.rs  render.rs
src/effect/: action.rs  ctx.rs  descriptor.rs  effect_trait.rs  frame_context.rs  host.rs  instance.rs  invocation.rs  labels.rs  license.rs  meta.rs  mod.rs  params_api.rs  prelude.rs  route.rs  tasks.rs  ui.rs
src/gpu/: metrics.rs  mod.rs  render_properties.rs  scheduling.rs  shaders.rs
src/gpu/backends/: mod.rs
src/gpu/backends/cuda/: buffer.rs  fence.rs  frame_scope.rs  mod.rs  pipeline.rs
src/gpu/backends/metal/: buffer.rs  fence.rs  frame_scope.rs  mod.rs  pipeline.rs
src/graph/: builder.rs  context.rs  execute.rs  mod.rs  pass.rs  resource.rs  source.rs
src/kernel/: descriptor.rs  from_ctx.rs  macros.rs  mod.rs  params.rs
src/kernel/builtin/: diff_struct.rs  mip_downsample_struct.rs  mod.rs  text_overlay_struct.rs
src/kernels/: diff.rs  mip.rs  mod.rs
src/kernels/helpers/: blur.rs  mod.rs  sweep.rs
src/params/: blend.rs  convert.rs  legacy.rs  mod.rs  traits.rs  value.rs
src/pipeline/: mip.rs  mod.rs  sweep.rs
src/testing/: compare.rs  context.rs  host.rs  media.rs  mod.rs  output.rs  runner.rs  scene.rs
src/text/: atlas.rs  gpu.rs  mod.rs  sdf.rs
src/types/: backend.rs  buffer.rs  config.rs  config_builder.rs  kernel.rs  kernel_params.rs  maths.rs  mod.rs  pr_rect.rs  render.rs
src/ui/: blend_mode.rs  mod.rs
tests/: config_builder.rs  declare_kernel_macro.rs  gpu_struct_compilefail.rs  gpu_struct_unit.rs  graph_smoke.rs  kernel_params_macro.rs  params_api.rs  params_compilefail.rs  params_macro.rs  ui_rules.rs
tests/gpu_struct/compile-fail/: generic_struct.rs  generic_struct.stderr  nested_without_gpu_nested.rs  nested_without_gpu_nested.stderr  reference_field.rs  reference_field.stderr  repr_packed.rs  repr_packed.stderr  tuple_field.rs  tuple_field.stderr  unit_struct.rs  unit_struct.stderr  unknown_attribute.rs  unknown_attribute.stderr  untrusted_vec3.rs  untrusted_vec3.stderr  usize_field.rs  usize_field.stderr  vec3_array_rejected.rs  vec3_array_rejected.stderr
tests/params/compile-fail/: default_out_of_range.rs  default_out_of_range.stderr  duplicate_param.rs  duplicate_param.stderr  group_end_without_open.rs  group_end_without_open.stderr  missing_label.rs  missing_label.stderr
vekl/: LICENSE  README.md
vekl/core/: config.h  traits.h
vekl/runtime/cpu/: defines.h  math.h
vekl/runtime/cuda/: defines.cuh
vekl/utils/image/: 2d.h  coords.h
vignette/: Cargo.toml  build.rs
vignette/shaders/: main.wgsl  vignette.cu  vignette.shader
vignette/src/: kernel.rs  lib.rs  params.rs  premiere.rs  wgpu_procs.rs
