[workspace]
members = [".", "prgpu-macro", "prgpu-build"]

[package]
name = "prgpu"
version = "0.2.0"
edition = "2024"
description = "GPU-accelerated rendering utilities for Adobe Premiere Pro and After Effects plugins"
license = "MIT OR Apache-2.0"
keywords = ["gpu", "video", "after-effects", "premiere", "rendering"]
categories = ["graphics", "multimedia::video", "rendering"]
readme = "README.md"
repository = "https://github.com/Exaecut/prgpu"
homepage = "https://github.com/Exaecut/prgpu"
documentation = "https://docs.rs/prgpu"
include = [
    "src/**",
    "shaders/**",
    # Vendored snapshot of Exaecut/vekl — lets prgpu's own built-in shaders
    # (mip_downsample etc) `import vekl;` when the crate is consumed from
    # crates.io. The authoritative vekl lives at Exaecut/vekl; this copy is
    # refreshed before each publish by scripts/sync-vekl.sh.
    "vekl/**/*.slang",
    "vekl/LICENSE",
    "vekl/README.md",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "docs/**",
]

[features]
default = ["cargo-clippy"]
cargo-clippy = []
# Kept as a no-op in Phase 1 so other workspace effects still resolve.
# The underlying functionality was removed; the feature will be deleted once
# all effects stop referencing it.
shader_hotreload = []
# TRANSITIONAL(plan-02): kept empty so unported effects that still request
# `prgpu/features = ["build"]` resolve. Delete once all effects use prgpu-build.
build = []
timing = []
bench = ["dep:criterion"]
testing = ["dep:image", "dep:serde", "dep:serde_json"]

[dependencies]
log = { version = "0.4", features = ["release_max_level_trace", "max_level_trace"] }
exaecut-after-effects = "0.5"
exaecut-premiere = "0.5"
bytemuck = { version = "1.23.1", features = ["derive", "min_const_generics"] }
parking_lot = "0.12.3"
paste = "1.0.15"
rayon = "1.10"
prgpu-macro = { version = "0.2.0", path = "prgpu-macro" }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support", "html_reports"], optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
cudarc = { version = "0.19.3", default-features = false, features = ["std", "driver", "fallback-dynamic-loading", "cuda-13010"] }

[build-dependencies]
prgpu-build = { version = "0.2.0", path = "prgpu-build" }

[target.'cfg(target_os = "windows")'.dev-dependencies]
cudarc = { version = "0.19.3", default-features = false, features = ["std", "driver", "fallback-dynamic-loading", "cuda-13010"] }

[dev-dependencies]
trybuild = "1"
# `params!` expansion references after_effects / premiere, so the integration
# tests that invoke it need both crates in scope.
exaecut-after-effects = "0.5"
exaecut-premiere = "0.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(does_dialog)", "cfg(with_premiere)", "cfg(threaded_rendering)"] }
