[package]
name = "echo"
version = "1.0.0"
authors = ["Marvin Cano <marvin.cano@exaecut.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
after-effects = { git = "https://github.com/Exaecut/after-effects.git", branch = "master", features = [
    "catch-panics",
] }
premiere = { git = "https://github.com/Exaecut/after-effects.git", branch = "master" }
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3.3"
wgpu = { version = "25.0.2", features = ["spirv"] }
pollster = "0.4.0"
futures-intrusive = "0.5.0"
parking_lot = "0.12.3"
num_cpus = "1.16"
webbrowser = "1.0.4"
hex = "0.4.3"
themis = { git = "https://github.com/Exaecut/themis.git", features = [
    "license",
] }
home = "0.5.11"
bytemuck = "1.23.1"
crevice = "0.18.0"

[build-dependencies]
pipl = { git = "https://github.com/Exaecut/after-effects.git", branch = "master" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
debug = false
panic = "unwind"

[profile.dev]
opt-level = 1
debug = "full"
strip = "none"
split-debuginfo = "packed"
panic = "unwind"

[profile.dev.package."*"]
opt-level = 3

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(shader_hotreload)",
    "cfg(does_dialog)",
    "cfg(with_premiere)",
    "cfg(threaded_rendering)",
] }
