[package]
name = "hueshift"
version = "1.0.2"
authors = ["Marvin Cano <marvin.cano@exaecut.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prgpu = { path = "../prgpu", default-features = false }
after-effects = { git = "https://github.com/Exaecut/after-effects.git", branch = "master", features = [
    "catch-panics",
] }
premiere = { git = "https://github.com/Exaecut/after-effects.git", branch = "master" }
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3.3"
wgpu = { version = "25.0.2", features = ["spirv"] }
pollster = "0.4.0"
futures-intrusive = "0.5.0"
parking_lot = "0.12.3"
num_cpus = "1.16"
webbrowser = "1.0.4"
hex = "0.4.3"
themis = { git = "https://github.com/Exaecut/themis.git", features = ["license"] }
home = "0.5.11"
bytemuck = "1.13.1"

[build-dependencies]
pipl = { git = "https://github.com/Exaecut/after-effects.git", branch = "master" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(shader_hotreload)"] }
