[package]
name = "prgpu-macro"
version = "0.1.18"
edition = "2024"
authors = ["Marvin Cano <marvin.cano@exaecut.io>"]
description = "Procedural macros for prgpu — GPU struct layout / ABI codegen"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Exaecut/prgpu"
homepage = "https://github.com/Exaecut/prgpu"
readme = "README.md"
keywords = ["gpu", "macro", "rendering", "video", "after-effects"]
categories = ["rendering", "development-tools::procedural-macro-helpers"]
include = ["src/**/*.rs", "Cargo.toml", "README.md"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits", "visit", "visit-mut"] }
quote = "1"
proc-macro2 = "1"
