[package]
name = "vignette"
version = "1.0.0"
authors = ["Marvin Cano <marvin.cano@exaecut.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prgpu = { path = "../prgpu", default-features = false }
after-effects = { git = "https://github.com/Exaecut/after-effects.git", branch = "master", features = [
    "catch-panics",
] }
premiere = { git = "https://github.com/Exaecut/after-effects.git", branch = "master" }
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"
pollster = "0.4.0"
futures-intrusive = "0.5.0"
parking_lot = "0.12.4"
num_cpus = "1.17"
webbrowser = "1.0.5"
hex = "0.4.3"
themis = { git = "https://github.com/Exaecut/themis.git", features = [
    "license",
] }
home = "0.5.11"
bytemuck = "1.23.1"
crevice = "0.18.0"

[build-dependencies]
pipl = { git = "https://github.com/Exaecut/after-effects.git", branch = "master" }
prgpu = { path = "../prgpu", features = ["build"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(shader_hotreload)",
    "cfg(does_dialog)",
    "cfg(with_premiere)",
    "cfg(threaded_rendering)",
] }
